--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,35 @@
+body {
+    text-align: center;
+    color: white;
+    background-color: black;
+    display: block;
+    padding: 8px;
+}
+
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 50px;
+}
+
+a {
+    font-size: 16px;
+    color: aquamarine;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 42px;
+    font-weight: 300;
+}
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: gray;
+}
+
+#copyright {
+    text-align: right;
+}
 
